--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 	<title>Test</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container">	
@@ -53,7 +54,25 @@
 		</div>
 
 		<button class="btn btn-warning" onclick="Ejercicio4()">Calcular</button>
-		<p id="resultado"></p>
+		<p id="result"></p>
+
+		<hr>
+		<h1>Clase 06-10-2020</h1>
+		<div class="container border bg-light mt-3 p-3 d-flex justify-content-center">
+			<input type="text" placeholder="FRASE" id="fraseIn">
+			<button class="btn btn-primary ml-2" id="botonFraseIn">Insertar Frase</button>
+		</div>
+
+		<div class="container border bg-light mt-3 p-3 d-flex justify-content-center flex-column align-item-center">
+			<p id="tamano"></p>
+			<p id="espacios"></p>
+			<p id=reves></p>
+		</div>
+
+		<div class="container border bg-light mt-3 p-3 d-flex justify-content-center flex-column align-item-center">
+			<p id="salida"> Imprime la cadena con guiones</p>
+		</div>
+
 
 		<script src="js/logic.js"></script>
 
